# analyst_tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSON_TEMPLATE.md  LICENSE  README.md  ROADMAP.md  curriculum.json  pyproject.toml
.agents/skills/audit-course-lesson/: SKILL.md
.agents/skills/check-understanding/: SKILL.md
.agents/skills/find-your-level/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_lesson_proposal.md
.github/workflows/: pages.yml
docs/: PROJECT_STATUS.md  README.md  capstone-independent-review.md  course-design.md  data-universe.md  getting-started.md  phase-03-learning-guide.md  phase-06-design.md  phase-07-design.md  phase-07-learning-guide.md  phase-08-design.md  phase-09-design.md  phase-10-design.md  phase-11-design.md  phase-12-design.md  phase-13-design.md  phase-14-design.md  phase-15-design.md  phase-16-design.md  phase-17-design.md  phase-18-design.md  pre-course-preparation.md  professions-and-routes.md  research-baseline.md
glossary/: README.md  myths.md  terms.md
outputs/: index.json
phases/00-entry-and-tools/: README.md
phases/00-entry-and-tools/01-profession-map/: lesson.json  quiz.json
phases/00-entry-and-tools/01-terminal-and-filesystem/: lesson.json  quiz.json
phases/00-entry-and-tools/02-git-foundations/: lesson.json  quiz.json
phases/00-entry-and-tools/02-python-and-sql-diagnostic/: lesson.json  quiz.json
phases/00-entry-and-tools/02-terminal-and-filesystem/: lesson.json
phases/00-entry-and-tools/03-branches-and-review/: lesson.json  quiz.json
phases/00-entry-and-tools/03-git-foundations/: lesson.json  quiz.json
phases/00-entry-and-tools/03-terminal-and-filesystem/: lesson.json  quiz.json
phases/00-entry-and-tools/04-branches-and-review/: lesson.json
phases/00-entry-and-tools/04-git-foundations/: lesson.json
phases/00-entry-and-tools/04-secrets-and-sensitive-data/: lesson.json  quiz.json
phases/00-entry-and-tools/05-branches-and-review/: lesson.json  quiz.json
phases/00-entry-and-tools/05-secrets-and-sensitive-data/: lesson.json  quiz.json
phases/00-entry-and-tools/06-secrets-and-sensitive-data/: lesson.json
phases/01-reproducible-project/: README.md
phases/01-reproducible-project/01-python-versions/: lesson.json  quiz.json
phases/01-reproducible-project/01-uv-environments/: lesson.json  quiz.json
phases/01-reproducible-project/04-modules-and-scripts/outputs/order_metrics_project/: pyproject.toml
phases/01-reproducible-project/04-modules-and-scripts/outputs/order_metrics_project/data/: orders.csv
phases/01-reproducible-project/04-modules-and-scripts/outputs/order_metrics_project/src/order_metrics/: cli.py  core.py
phases/01-reproducible-project/05-ruff/outputs/ruff_project/: pyproject.toml
phases/01-reproducible-project/09-continuous-integration/outputs/ci_project/: pyproject.toml
phases/01-reproducible-project/09-continuous-integration/outputs/ci_project/.github/workflows/: quality.yml
phases/02-numpy/: README.md
phases/02-numpy/01-arrays/: lesson.json  (+1 more)
phases/03-pandas/: README.md
phases/04-sql-and-duckdb/: README.md
phases/05-sources-and-formats/: README.md
phases/06-eda-and-visualization/: README.md
phases/07-reliable-analytics/: README.md
phases/08-product-analytics/: README.md
phases/09-applied-statistics/: README.md
phases/10-experiments/: README.md
phases/11-analytics-engineering/: README.md
phases/12-performance/: README.md
phases/13-causal-analysis/: README.md
phases/14-time-series/: README.md
phases/15-applied-machine-learning/: README.md
phases/16-tabular-ml/: README.md
phases/17-delivery/: README.md
phases/18-capstones/: README.md
schemas/: artifact.schema.json  lesson.schema.json  quiz.schema.json
scripts/: __init__.py  course_model.py  render_curriculum.py  render_lesson_pages.py  render_outputs.py  render_site.py  run_lesson_tests.py  run_quiz.py  scaffold_lesson.py  validate_course.py
scripts/templates/: lesson.html
site/: 404.html  README.md  app.js  catalog.html  catalog.js  common.js  data.js  glossary.html  glossary.js  index.html  lesson.js  progress.js  robots.txt  routes.html  routes.js  sitemap.xml  style.css
tests/: test_course_structure.py  test_quiz_runner.py
(+2374 files in other folders)
