[project]
name = "analyst-tools-course"
version = "0.1.0"
description = "Open course on modern tools and workflows for data analysts"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6,<2.5",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3,<7",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.17,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
