[project]
name = "analyst-tools-course"
version = "0.1.0"
description = "Open course on modern tools and workflows for data analysts"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14,<5",
    "duckdb>=1.5.3,<1.6",
    "numpy>=2.4.6,<2.5",
    "openpyxl>=3.1,<3.2",
    "pandas>=3.0.3,<3.1",
    "pyarrow>=24,<25",
    "requests>=2.34,<3",
    "sqlalchemy>=2.0,<2.1",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3,<7",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.17,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
