[project]
name = "analyst-tools-course"
version = "0.1.0"
description = "Open course on modern tools and workflows for data analysts"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.2.1,<6.3",
    "beautifulsoup4>=4.14,<5",
    "duckdb>=1.5.3,<1.6",
    "pandera[pandas]>=0.31.1,<0.32",
    "matplotlib>=3.11,<3.12",
    "numpy>=2.4.6,<2.5",
    "openpyxl>=3.1,<3.2",
    "pandas>=3.0.3,<3.1",
    "plotly>=6.8,<6.9",
    "pydantic>=2.13.4,<2.14",
    "pyarrow>=24,<25",
    "requests>=2.34,<3",
    "seaborn>=0.13.2,<0.14",
    "sqlalchemy>=2.0,<2.1",
    "scipy>=1.17,<1.18",
    "statsmodels>=0.14.6,<0.15",
    "dbt-core==1.11.11",
    "dbt-duckdb==1.10.1",
    "polars>=1.41.2,<1.42",
    "ibis-framework[duckdb,polars]>=12,<13",
    "scikit-learn>=1.9,<1.10",
    "catboost>=1.2.10,<1.3",
    "shap>=0.50,<0.52",
    "optuna>=4.9,<4.10",
    "mlflow-skinny>=3.14,<3.15",
    "xlsxwriter>=3.2,<3.3",
    "streamlit>=1.56,<1.57",
    "fastapi>=0.139.0,<0.140",
    "uvicorn>=0.50.1,<0.51",
    "httpx2>=2.5,<2.6",
    "markdown-it-py>=4.0,<5",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.2,<7",
    "pyyaml>=6.0.3,<7",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.17,<0.16",
    "sqlfluff>=3,<4",
    "sqlfluff-templater-dbt>=3,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
