[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "order-metrics"
version = "0.1.0"
description = "Validated order metrics from CSV"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
order-metrics = "order_metrics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/order_metrics"]
