[project]
name = "ruff-analytics-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
